<resources>
    <string name="app_name">Text Detection with ML</string>
    <string name="app_names">Ocr Detection</string>

    <string name="n_title">Shake Freeze is running</string>
    <string name="n_content_shake">Shake to rotate the screen.</string>
    <string name="n_content_tilt">Tilt to rotate the screen.</string>
    <string name="ui_setting">Setting status</string>
    <string name="ui_service_desc">Allows shake to rotate when On</string>
    <string name="ui_orientation_locked">Auto-rotate screen</string>
    <string name="ui_orientation_control_tilt">Tilt</string>
    <string name="ui_orientation_control_shake">Shake</string>
    <string name="ui_orientation_control_locked">Locked</string>
    <string name="ui_0_deg">0Â°</string>
    <string name="ui_90_deg">90Â°</string>
    <string name="ui_180_deg">180Â°</string>
    <string name="ui_270_deg">270Â°</string>
    <string name="pref_start_on_boot">Start service automatically</string>
    <string name="pref_start_on_boot_key">pref_start_on_boot</string>
    <string name="pref_start_on_boot_summary">Background service will be started on device start.</string>
    <string name="pref_sensitivity">Sensitivity</string>
    <string name="pref_sensitivity_key">pref_sensitivity</string>
    <string name="pref_sensitivity_desc">Less sensitivity means stronger shakes are needed.</string>

    <string-array name="pref_sensitivity_summaries">
        <item>Vigorous shake</item>
        <item>Strong shake</item>
        <item>Normal shake</item>
        <item>Light shake</item>
        <item>A little stir</item>
    </string-array>

    <string name="pref_shakes_to_rotate">Shakes to rotate</string>
    <string name="pref_shakes_to_rotate_key">pref_shakes_to_rotate</string>
    <string name="pref_shakes_to_rotate_desc">How many shakes approximately you need to rotate the screen</string>

    <string-array name="pref_shakes_to_rotate_summaries">
        <item>A couple</item>
        <item>More then a couple</item>
        <item>About four or five</item>
        <item>Half a dozen</item>
        <item>Seven - Eight</item>
        <item>Nine-ish</item>
        <item>About a dozen</item>
        <item>More than a dozen</item>
        <item>Your hand will hurt</item>
    </string-array>

    <string name="pref_user_rotation">User rotation</string>
    <string name="pref_user_rotation_summary">Manual control of the rotation</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="ui_goto_help">Tap on menu in top-right corner for more help. Please check the About as well!</string>
    <string name="ui_help_desc">        Shake the phone along X and Y to change orientation
        and along Z axis to switch tilt/shake.
</string>
    <string name="ui_help_example">    	Example: Turn on the service and switch to Shake mode.
    	Then hold the phone in landscape and shake up and down (X axis).
        Landscape will be locked in all apps that have no orientation
        preference.
</string>
    <string name="ui_help_example2">    	Example2: Turn on the service and shake the phone towards/away (Z axis)
    	from yourself to switch between shake and tilt control.
</string>
    <string name="ui_help_example3">    	See screenshots in the store for more help.
</string>
    <string name="ui_help_lock_toggle">	    Toggle Tilt/Shake has same effect as Auto-Rotation setting
	    On/Off. When the service is off, shaking has no effect.
	    Use the buttons for manual control.
</string>
    <string name="ui_help_note">	    Note that the orientation enforcement works only in apps,
	    that do not have any orientation preference. It works in
	    browsers, some movie players, facebook etc. But it does not
	    work in games and on home screen.
</string>
    <string name="title_activity_ttsactivity_test">TTSActivityTest</string>
    <string name="title_activity_received_status">ReceivedStatusActivity</string>
    <string name="ui_project_note">	    - Live Video Object Detection - \n ------------ Start Info -----------  \n Info : \n  Train Object : in sd card picture of Dir and \n  Data Set of Object .\n  Testing image : live capture store with sequence date order  and compare with train set .\n
           -- ------------------------------ -- \n
</string>
    <string name="ui_project_note1">	    Results :Calculate with distance based with predicate low value  : \n
           -- -------------End-------------- --..
</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="send_email_text">Send Email</string>
    <string name="mail_intent_chooser_text">Send mail...</string>
    <string name="no_email_client_error">There are no email clients installed.</string>
    <string name="copy_text">Copy to clipboard</string>
    <string name="clipboard_copy_successful_message">Copied to clipboard.</string>

</resources>
