<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/backwall"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ProjectSettings" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_setting"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />
  <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_service_desc"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff" />
    <LinearLayout
        android:id="@+id/pb_orientation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

 <ToggleButton
     android:id="@+id/bt_service_toggle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="3dp"
     android:background="#D2B48C"
     android:text="@string/ui_setting"
     android:textColor="#ffffff" />
        
           <ToggleButton
        android:id="@+id/tb_auto_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_orientation_locked"
         android:background="#D2B48C"
        android:textColor="#ffffff"
        android:textOff="@string/ui_orientation_control_shake"
        android:textOn="@string/ui_orientation_control_tilt" />
           
    </LinearLayout>

 <LinearLayout
     android:id="@+id/pb_orientation1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
      android:layout_gravity="center"
     android:orientation="horizontal" >

     <Button
         android:id="@+id/bt_0_deg"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:background="#D2B48C"
         android:text="@string/ui_0_deg"
         android:textColor="#ffffff" />

 <Button
     android:id="@+id/bt_90_deg"
     style="?android:attr/buttonStyleSmall"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="3dp"
     android:background="#D2B48C"
     android:text="@string/ui_90_deg"
     android:textColor="#ffffff" />

        <Button
            android:id="@+id/bt_180_deg"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="#D2B48C"
            android:text="@string/ui_180_deg"
            android:textColor="#ffffff" />

<Button
        android:id="@+id/bt_270_deg"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_270_deg"
         android:background="#D2B48C"
        android:textColor="#ffffff" />
       

    </LinearLayout>
    
   <LinearLayout
        android:id="@+id/lvsd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
         android:id="@+id/bt_Train"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:background="#D2B48C"
         android:onClick="callOnTrackUi"
         android:text="View Object"
         android:textColor="#ffffff" />

 
       
       </LinearLayout>
       
   
    <fragment
        android:id="@+id/frag_settings"
        android:name="person.impaired.visual.app.com.visual_impaired_person.SettingsFragment"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff" />

</LinearLayout>